some small UI changes on experiments page to prevent text wrapping in accessions

--- a/web/src/main/webapp/resources/css/atlas.css
+++ b/web/src/main/webapp/resources/css/atlas.css
@@ -450,3 +450,7 @@ a.help-icon {
     padding-left: 85px !important;
     padding-right: 85px !important;
 }
+
+#experiments-table .nowrap {
+    white-space: nowrap;
+}
